Html neue Buttons Magnetartikel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Fuenf</title>
   </head>
   <body>
+    <h1>Zuerst muss eine Datei erstellt werden, die alle Magnetartikel-Adressen abspeichert.</h1>
+    <button id="neu_Button_magAdr">Magnetartikel-Adressen neu erstellen</button>
+    <button id="laden_Button_magAdr">Magnetartikel-Adressen-Datei laden</button>
+    <p>hier passiert denn was</p>
+    <button id="saveButton_magAdr">Magnetartikel-Adressen-Datei abspeichern</button>
 
     <h1>Textdatei einlesen und verarbeitet herunterladen</h1>
     <input type="file" id="fileInput" accept=".txt">
